# ant_tube

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
Antube.app/Contents/: Info.plist
assets/: antube.icns  mac_os_bundle.sh
src/: main.rs  server.rs  video_streamer.rs
