[package]
name = "antube"
version = "0.1.0"
edition = "2021"

[dependencies]
autonomi = { path = "../autonomi/autonomi", features = ["loud"] }
eframe = "0.24.0"
egui = "0.24.0"
image = "0.25.6"
color-eyre = "0.6.3"
dirs-next = "~2.0.0"
serde_json = "1.0.132"
tokio = { version = "1.43.1", features = ["full"] }
bytes = "1.8.0"
rfd = "0.15"
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
clap = { version = "4.0", features = ["derive"] }
